# toro

./: AGENT.md  LICENSE  README.md
deployment/script/: README.md  release  update_default
esp/: AGENT.md  Cargo.toml  README.md  build.rs  cfg.toml.example  partitions.csv  run_until.sh
esp/src/: http.rs  lcd.rs  main.rs  ntp.rs  sensor.rs  wifi.rs
server/: .gitignore  AGENT.md  Cargo.toml  README.md  Rocket.toml  TODO.md
server/data/: fake_dump.sql  generate_fake.py  justfile
server/migrations/: 001-init.sql
server/src/: lib.rs  main.rs
server/tests/: common.rs  test_auth.rs  test_day.rs  test_migrate.rs  test_rate_limit.rs  test_readings.rs  test_token.rs  test_week.rs
