[package]
name = "esp"
version = "0.1.0"
authors = ["augusto <augusto@impa.br>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = { version = "0.29", default-features = false }
i2c-character-display = "0.5"
dht-embedded = "0.4"
# embassy-executor is not compatible with esp-idf's FreeRTOS runtime; use
# block_on + join/select for concurrency, or std::thread for parallelism.
embassy-time = { version = "0.5", features = ["generic-queue-8"] }

[build-dependencies]
embuild = "0.33"
toml = "0.8"
