[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
maud = { version = "0.27", features = ["rocket"] }
rocket = { version = "0.5", features = ["secrets"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }
bcrypt = "0.17"
hex = "0.4"
rand = "0.8"
